--- a/static/accounts/css/style.css
+++ b/static/accounts/css/style.css
@@ -1,12 +1,5 @@
-/*--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
-/* reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+article, aside, details, figcaption, figure,footer, header, menu, nav, section {display: block;}
 ol,ul{list-style:none;margin:0px;padding:0px;}
 blockquote,q{quotes:none;}
 blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
@@ -77,32 +70,6 @@ ul.facebook:hover{
 	background: #5D7BBA;
 }
 
-ul.twitter{
-	list-style:none;
-	padding:0;
-	-webkit-transition: all 0.5s ease-out;
-	-moz-transition: all 0.5s ease-out;
-	-ms-transition: all 0.5s ease-out;
-	-o-transition: all 0.5s ease-out;
-	background:#55ACEE;
-	padding: 12px;
-}
-i.tw{
-	width:30px;
-	height:30px;
-	background:url(../images/tw.png);
-	float:left;
-	margin-right: 2em;
-}
-ul.twitter li{
-	color:#fff;
-	font-size:1em;
-	float: left;
-	margin-top: 5px;
-}
-ul.twitter:hover{
-	background: #71B8ED;
-}
 span.term a{
 	color: #1888A8;
 	font-weight: bold;
@@ -137,7 +104,7 @@ span.term a:hover{
 }
 .lable-2 input[type="text"],input[type="Password"] { 
 	padding: 14px;
-	width: 94%;
+	width: 95%;
 	font-size: 1em;
 	margin: 18px 0px;
 	border:none;
@@ -184,29 +151,7 @@ input[type=submit] {
 	 background:#07793D;
 	 border:1px solid #07793D;
 }
-/**start-copy-right**/
-.copy-right {
-	text-align: center;
-	margin: 2em 0;
-}
-.copy-right p {
-	color: #FFF;
-	font-size:1em;
-}
-.copy-right p a {
-	font-family: 'Oxygen', sans-serif;
-	font-size:1em;
-	font-weight:600;
-	color:#55ACEE;
-	-webkit-transition: all 0.3s ease-out;
-	-moz-transition: all 0.3s ease-out;
-	-ms-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	transition: all 0.3s ease-out;
-}
-.copy-right a:hover{
-	color:#fff;
-}
+
 .col_1_of_2:first-child {
 	margin-left: 0;
 }
