--- a/templates/accounts/index.html
+++ b/templates/accounts/index.html
@@ -1,64 +1,223 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href="/static/accounts/css/style.css" rel='stylesheet' type='text/css' />
+<script src="/static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script src="/static/js/jquery.validate.min.js" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--webfonts-->
-<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-<!--//webfonts-->
 </head>
 <body>
 <div class="main">
-	<div class="social-icons">
-		 <div class="col_1_of_f span_1_of_f"><a href="#">
-		    <ul class='facebook'>
-		    	<i class="fb"> </i>
-		    	<li>Connect with Facebook</li>
-		    	<div class='clear'> </div>
-		    </ul>
-		    </a>
-		 </div>	
-		 <div class="col_1_of_f span_1_of_f"><a href="#">
-		    <ul class='twitter'>
-		      <i class="tw"> </i>
-		      <li>Connect with Twitter</li>
-		      <div class='clear'> </div>
-		    </ul>
-		    </a>
-		</div>
-		<div class="clear"> </div>	
-      </div>
-      <h2>Or Signup with</h2>
-		<form>
-		   <div class="lable">
-		        <div class="col_1_of_2 span_1_of_2">	<input type="text" class="text" value="First Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'First Name';}" id="active"></div>
-                <div class="col_1_of_2 span_1_of_2"><input type="text" class="text" value="Last Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}"></div>
+    <div class="col_1_of_f span_1_of_f" id="login" >
+        <ul class='facebook'>
+            <li>Login</li>
+            <div class='clear'> </div>
+        </ul>
+    </div>
+    <div class="col_1_of_f span_1_of_f" id="signup">
+        <ul class='facebook'>
+            <li>Sign Up</li>
+            <div class='clear'> </div>
+        </ul>
+
+    </div>
+    <div class="login">
+        <div class="clear"> </div>
+        <form id="login_form">{% csrf_token %}
+           <div class="lable-2">
+                <input type="text" id="login_username" name="login_username" class="text" placeholder="Username" >
+                <input type="password" id="login_password" name="login_password" class="text" placeholder="Password">
+                <label id="login_submit-error" class="error"></label>
+           </div>
+           <div class="submit" >
+              <input type="submit" id="login_btn" value="Login" >
+           </div>
+           <div class="clear"> </div>
+        </form>
+    </div>
+    <div class="signup">
+        <div class="clear"> </div>
+        <form id="signup_form">{% csrf_token %}
+           <div class="lable">
+                <div class="col_1_of_2 span_1_of_2"><input type="text" id="signup_fname" name="signup_fname" class="text" placeholder="First Name"  id="active"></div>
+                <div class="col_1_of_2 span_1_of_2"><input type="text" id="signup_lname" name="signup_lname" class="text" placeholder="Last Name" ></div>
                 <div class="clear"> </div>
-		   </div>
-		   <div class="lable-2">
-		        <input type="text" class="text" value="your@email.com " onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'your@email.com ';}">
-		        <input type="password" class="text" value="Password " onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password ';}">
-		   </div>
-		   <h3>By creating an account, you agree to our <span class="term"><a href="#">Terms & Conditions</a></span></h3>
-		   <div class="submit">
-			  <input type="submit" onclick="myFunction()" value="Create account" >
-		   </div>
-		   <div class="clear"> </div>
-		</form>
-		<!-----//end-main---->
-		</div>
-		 <!-----start-copyright---->
-   		<div class="copy-right">
-			<p>Template by <a href="http://w3layouts.com">w3layouts</a></p> 
-		</div>
-				<!-----//end-copyright---->
+           </div>
+           <div class="lable-2">
+
+                <div><input type="text" id="signup_email" name="signup_email" class="text" placeholder="your@email.com"></div>
+                <div><input type="text" id="signup_username" name="signup_username" class="text" placeholder="Username"></div>
+                <div><input type="password" id="signup_password" name="signup_password" class="text" placeholder="Password" ></div>
+                <div><input type="password" id="signup_password_confirm" name="signup_password_confirm" class="text" placeholder="Confirm Password"></div>
+           </div>
+           <div class="submit" >
+              <input type="submit" id="signup_btn" value="Create account" >
+           </div>
+           <div class="clear"> </div>
+        </form>
+    </div>
+</div>
+<script type="text/javascript">
+    jQuery.validator.setDefaults({
+        debug: true,
+        success: "valid"
+    });
+
+    $(function(){
+        $('.signup').hide();
+        $('#login>ul').css('backgroundColor','#5D7BBA');
+        $('#login').on('click',function(e){
+            $('.signup').hide();
+            $('.login').show();
+            $('#login>ul').css('backgroundColor','#5D7BBA');
+            $('#signup>ul').css('backgroundColor','#3B5998');
+        })
+        $('#signup').on('click',function(e){
+            $('.login').hide();
+            $('.signup').show();
+            $('#signup>ul').css('backgroundColor','#5D7BBA');
+            $('#login>ul').css('backgroundColor','#3B5998');
+        })
+
+        $( "#signup_form" ).validate({
+            rules: {
+                signup_username: {
+                    required:   true,
+                    remote:{
+                        'method': 'POST',
+                        'url': '//' + window.location.hostname + '/accounts/check_username/',
+                        'data': {
+                            username    :   function()
+                            {
+                                return $('#signup_username').val()
+                            }
+                        }
+                    }
+                },
+                signup_fname: {
+                    required:   true
+                },
+                signup_lname: {
+                    required:   true
+                },
+                signup_password: {
+                    required:   true,
+                    minlength:  4
+                },
+                signup_password_confirm: {
+                    required: true,
+                    equalTo: "#signup_password"
+                },
+                signup_email:   {
+                    required: true,
+                    email:  true,
+                    remote:{
+                        'method': 'POST',
+                        'url': '//' + window.location.hostname + '/accounts/check_email/',
+                        'data': {
+                            email   :   function()
+                            {
+                                return $('#signup_email').val()
+                            }
+                        }
+                    }
+                }
+            },
+            messages:{
+                signup_fname:   "Please Enter First Name",
+                signup_lname:   "Please Enter Last Name",
+                signup_username: {
+                    required:   "Please Enter Username",
+                    remote: "Username Already Exist"
+                },
+                signup_password: {
+                    required:      "Please Enter Password",
+                    minlength:    "At least 4 character"
+                },
+                signup_password_confirm:{
+                    required:   "Please Confirm Password"
+                },
+                signup_email:{
+                    required:   "Please Enter Email",
+                    email:  "Please Enter Valid Email",
+                    remote: "Email Already Registered"
+                }
+            },
+            submitHandler: function() {
+                var signup_data={
+                    'fname':    $('#signup_fname').val(),
+                    'lname':    $('#signup_lname').val(),
+                    'username':    $('#signup_username').val(),
+                    'email':    $('#signup_email').val(),
+                    'password':    $('#signup_password').val()
+                };
+                console.log(signup_data);
+                $.ajax({
+                        'method': 'POST',
+                        'url'   :'//'+window.location.hostname+'/accounts/signup/',
+                        'data'  :   signup_data,
+                        'dataType'  :   'JSON',
+                        'success'   :  function(res){
+                        }
+                })
+            }
+        });
+        $( "#login_form" ).validate({
+            rules: {
+                login_password: "required",
+                login_username: "required"
+            },
+            messages:{
+                login_username: "Please enter username",
+                login_password: "Please enter password"
+            },
+            submitHandler: function() {
+                var login_data={
+                    'username': $('#login_username').val(),
+                    'password': $('#login_password').val()
+                };
+                $('#login_submit-error').css('display','none');
+                $.ajax({
+                    'method': 'POST',
+                    'url': '//' + window.location.hostname + '/accounts/login_account/',
+                    'data': login_data,
+                    'dataType': 'JSON',
+                    'success': function (res) {
+                        if(res) {
+                            window.location = '/home/';
+                        }
+                        else
+                        {
+                            console.log('Incorrect Credentials');
+                            $('#login_submit-error').html('Incorrect Credentials');
+                            $('#login_submit-error').css('display','');
+                        }
+                    }
+                })
+            }
+        });
+        $.ajaxSetup({
+             headers: { "X-CSRFToken": getCookie("csrftoken") }
+            });
+
+    });
+    function getCookie(c_name)
+        {
+            if (document.cookie.length > 0)
+            {
+                c_start = document.cookie.indexOf(c_name + "=");
+                if (c_start != -1)
+                {
+                    c_start = c_start + c_name.length + 1;
+                    c_end = document.cookie.indexOf(";", c_start);
+                    if (c_end == -1) c_end = document.cookie.length;
+                    return unescape(document.cookie.substring(c_start,c_end));
+                }
+            }
+            return "";
+        }
+</script>
 </body>
 </html>
