Loading user information on profile page when user is logged in. Project thumbnail and basic informaiton upload. Project list loading.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -981,6 +981,12 @@ body{
 		right: 5px;
 		cursor: pointer;
 	}
+	.profile_name .edit-save{
+		position: absolute;
+		top: 25px;
+		right: 5px;
+		cursor: pointer;
+	}
 	.profile_emailId {
 		border-right: 1px solid #ddd;
 	}
