--- a/templates/accounts/index.html
+++ b/templates/accounts/index.html
@@ -5,6 +5,7 @@
 <link href="/static/accounts/css/style.css" rel='stylesheet' type='text/css' />
 <script src="/static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
 <script src="/static/js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="/static/js/_ajaxHelper.js" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 </head>
@@ -46,8 +47,8 @@
                 <div class="clear"> </div>
            </div>
            <div class="lable-2">
-
                 <div><input type="text" id="signup_email" name="signup_email" class="text" placeholder="your@email.com"></div>
+                <div><input type="text" id="signup_contact" name="signup_contact" class="text" placeholder="Mobile"></div>
                 <div><input type="text" id="signup_username" name="signup_username" class="text" placeholder="Username"></div>
                 <div><input type="password" id="signup_password" name="signup_password" class="text" placeholder="Password" ></div>
                 <div><input type="password" id="signup_password_confirm" name="signup_password_confirm" class="text" placeholder="Confirm Password"></div>
