--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -27,6 +27,7 @@
   <script src="/static/js/_home.js"></script>
   <script src="/static/js/jquery.validate.min.js"></script>
   <script type="text/javascript" src="/static/js/_accounts.js"></script>
+  <script type="text/javascript" src="/static/js/_ajaxHelper.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
@@ -109,18 +110,28 @@
 
   <!-- Banner -->
   <section id="banner">
-    <img src="{{ artist.cover_pic }}" alt="">
+    <img id="cover_pic" src="{{ artist.cover_pic }}" alt="">
     <!-- Portfolio Edit -->
     <a href="#"> <img class="edit-wall hide" src="/static/images/edit/camera1.png" alt="Change"></a>
+    <form class="form-inline" id='profile_cover_image_form' style="display: none" enctype="multipart/form-data">
+      <div class="form-group">
+        <input type='file' name='profile_cover_image' id='profile_cover_image' style='display:none;'>
+      </div>
+    </form>
   </section>
 
   <!-- User profile -->
   <section id="userProfile" class="">
     <div class="container">
       <div class="profile_pic_large">
-        <img src="{{ artist.profile_pic }}" alt="User Name">
+        <img id="profile_pic" src="{{ artist.profile_pic }}" alt="{{ artist.user.id }}">
         <!-- Portfolio Edit -->
         <a href="#"> <img class="edit-prof hide" src="/static/images/edit/camera2.png" alt="Change"></a>
+        <form class="form-inline" id='profile_image_form' style="display: none" enctype="multipart/form-data">
+          <div class="form-group">
+            <input type='file' name='profile_image' id='profile_image' style='display:none;'>
+          </div>
+        </form>
       </div>
       <div class="col-lg-4 col-lg-offset-2 col-md-4 col-offset-md-2 col-sm-10 col-sm-offset-2 col-xs-12">
         <!-- Portfolio Edit -->
@@ -128,6 +139,7 @@
           <h3 class="color-000" contentEditable="false">{{ artist.user.get_full_name }}</h3>
           <p class="color-666 user-obj" contentEditable="false">{{ artist.about_me }}</p>
           <img src="/static/images/edit/pen.png" class="edit-pen hide" alt="edit">
+          <img src="/static/images/edit/portfolio.png" class="edit-save hide" alt="save">
         </div>
       </div>
 
@@ -143,9 +155,9 @@
         </div>
         <div class="col-lg-5 col-md-5 col-sm-4 col-xs-12 center-text">
           <div class="profile_contactNo border-divider">
-            <a href="tel:{{ artist.user.contact }}" class="color-000">
+            <a href="tel:{{ artist.user.contact_number }}" class="color-000">
               <span><img src="/static/images/phone.png" alt="Phone"></span>
-              +91-{{ artist.user.contact }}
+              +91-{{ artist.user.contact_number }}
             </a>
           </div>
         </div>
@@ -203,14 +215,31 @@
         <!-- view profile -->
         <div class="leftPanel">
           <div class="lp_title">
-            1 Projects
+            {{ projects.count }} Projects
             <!-- Portfolio Edit -->
             <button class="btn btn-black show">ADD <img src="/static/images/edit/plus.png" alt="+"></button>
           </div>
           <hr class="ul-border">
           <div class="left-panel-scroll">
             <ul>
-
+            {% if projects.count > 0 %}
+                {% for project in projects %}
+                    <li data-proj-id="{{ project.id }}">
+                        <a href="#">
+                            <img src="{{ project.thumbnail }}" alt="">
+                            <span>{{ project.title }}</span>
+                            <div class="overLay"></div>
+                            <img src="/static/images/edit/empty-trash.png" class="emptyTrash" alt="delete">
+                            <img src="/static/images/edit/trash.png" class="deleteTrash" alt="delete">
+                        </a>
+                        <div class="deletePrompt hide">
+                            <h4>Are you sure?</h4>
+                            <a href="#">Cancel</a>
+                            <a href="#">Yes, Delete</a>
+                        </div>
+                    </li>
+                {% endfor %}
+            {% endif %}
             </ul>
           </div>
           <hr class="ul-border">
@@ -224,7 +253,7 @@
         <div class="right_viewArea">
           <div id="anchor-point"></div>
           <ul class="nav-categories">
-            <li  class='all' class="active">
+            <li  class="all active">
               <a style='cursor:pointer'>
                 <img src="/static/images/header/all-black.png" alt="all">
                 <span>All</span>
@@ -256,7 +285,7 @@
             </li>
           </ul>
           <div id="rightView_content">
-            <div class="pH_row">
+            <div class="pH_row" data-proj-id="0">
               <div class="titleSection">
                 <span class="p_mt">Title</span>
                 <span class="p_st">Project Type</span>
@@ -267,7 +296,7 @@
             </div>
 
             <!-- Portfolio Edit -->
-            <div class="pH_row-edit hide">
+            <div class="pH_row-edit hide" data-proj-id="0">
               <div class="media">
                 <div class="media-left">
                   <a href="#">
@@ -277,7 +306,6 @@
                         <input type='file' name='project_title_image' id='project_title_image' style='display:none;'>
                       </div>
                     </form>
-
                   </a>
                 </div>
                 <div class="media-body">
