Loading user information on profile page when user is logged in. Project thumbnail and basic informaiton upload. Project list loading.
Loading projet info
Updating project info
Deleting project

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -987,6 +987,12 @@ body{
 		right: 5px;
 		cursor: pointer;
 	}
+	.edit-proj{
+		position: absolute;
+		top: 70px;
+		right: 35px;
+		cursor: pointer;
+	}
 	.profile_emailId {
 		border-right: 1px solid #ddd;
 	}
